--- a/ArgentBank-FrontEnd/src/css/main.css
+++ b/ArgentBank-FrontEnd/src/css/main.css
@@ -21,6 +21,10 @@ body {
   background-color: #12002b;
 }
 
+.user-welcome-title {
+  margin-top: 0;
+}
+
 .sr-only {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
@@ -182,7 +186,6 @@ body {
   background-color: white;
   width: 300px;
   margin: 0 auto;
-  margin-top: 3rem;
   padding: 2rem;
 }
 
@@ -271,7 +274,7 @@ body {
   padding: 10px;
 }
 
-.header {
+.user-welcome {
   color: #fff;
   margin-bottom: 2rem;
 }
