Logout is done.

--- a/ArgentBank-FrontEnd/src/css/main.css
+++ b/ArgentBank-FrontEnd/src/css/main.css
@@ -91,10 +91,7 @@ body {
   width: 200px;
 }
 
-.fa-user-circle {
-  margin-right: 5px;
-}
-
+.fa-user-circle, 
 .fa-sign-out {
   margin-right: 5px;
 }
@@ -192,6 +189,7 @@ body {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
+  cursor: pointer;
 }
 
 .sign-in-content {
