Images are lightened.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,7 +97,7 @@ body {
 }
 
 .hero {
-  background-image: url('/img/bank-tree.webp');
+  background-image: url('/img/bank-tree.avif');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
