--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,24 +1,124 @@
+.color-blue {
+  color: #2c3e50;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+.font-size-1rem {
+  font-size: 1rem;
+}
+
+.font-size-1dot1rem {
+  font-size: 1.1rem;
+}
+
+.font-size-1dot2rem {
+  font-size: 1.2rem;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.margin-0 {
+  margin: 0;
+}
+
+.margin-0-auto {
+  margin: 0 auto;
+}
+
+.margin-top-1rem {
+  margin-top: 1rem;
+}
+
+.margin-bottom-2rem {
+  margin-bottom: 2rem;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.padding-2rem {
+  padding: 2rem;
+}
+
+.padding-8px {
+  padding: 8px;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.flex-direction-column {
+  flex-direction: column;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.box-sizing-border-box {
+  box-sizing: border-box;
+}
+
+.width-100percent {
+  width: 100%;
+}
+
+.width-200px {
+  width: 200px;
+}
+
+.button {
+  border-color: var(--color-green);
+  background-color: var(--color-green);
+  color: var(--color-black);
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+:root {
+  --color-green: #00bc77;
+  --color-white: white;
+  --color-black: black;
+}
+
 html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
   min-height: 100vh;
 }
 
 h1 {
   font-size: 24px;
-}
-
-.main {
-  flex: 1;
 }
 
 .bg-dark {
@@ -49,22 +149,13 @@ h1 {
   height: 1px !important;
   margin: -1px !important;
   overflow: hidden !important;
-  padding: 0 !important;
   position: absolute !important;
   width: 1px !important;
   white-space: nowrap !important; /* 3 */
 }
 
 .main-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 5px 20px;
-}
-
-.main-nav a {
-  font-weight: bold;
-  color: #2c3e50;
 }
 
 .main-nav a.router-link-exact-active {
@@ -74,7 +165,6 @@ h1 {
 .main-nav-item {
   text-decoration: none;
   margin-right: 0.5rem;
-  cursor: pointer
 }
 
 .main-nav-item-user {
@@ -85,14 +175,8 @@ h1 {
   text-decoration: underline;
 }
 
-.main-nav-logo {
-  display: flex;
-  align-items: center;
-}
-
 .main-nav-logo-image {
   max-width: 100%;
-  width: 200px;
 }
 
 .fa-user-circle, 
@@ -106,23 +190,11 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
-  position: relative;
 }
 
 .hero-content {
-  position: relative;
   top: 2rem;
-  width: 200px;
-  background: white;
-  padding: 2rem;
-  text-align: left;
-  margin: 0 auto;
-}
-
-.hero-content .subtitle {
-  font-weight: bold;
-  font-size: 1rem;
-  margin: 0;
+  background: var(--color-white);
 }
 
 .hero-content .text {
@@ -130,86 +202,31 @@ h1 {
   font-size: 0.9rem;
 }
 
-@media (width >= 920px) {
-  .hero {
-    height: 400px;
-    background-position: 0% 33%;
-  }
-
-  .hero-content {
-    position: absolute;
-    top: 50px;
-    right: 50px;
-    width: 300px;
-    margin: 2rem;
-  }
-
-  .hero-content .subtitle {
-    font-size: 1.5rem;
-  }
-
-  .hero-content .text {
-    font-size: 1.2rem;
-  }
-}
-
-.features {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (width >= 920px) {
-  .features {
-    flex-direction: row;
-  }
-}
 
 .feature-icon {
   width: 100px;
-  border: 10px solid #00bc77;
+  border: 10px solid var(--color-green);
   border-radius: 50%;
   padding: 1rem;
 }
 
 .feature-item {
-  flex: 1;
   padding: 2.5rem;
 }
 
 .feature-item-title {
   color: #222;
   font-size: 1.25rem;
-  font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
-.sign-in-button {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #000;
-  cursor: pointer;
-}
-
 .sign-in-content {
-  box-sizing: border-box;
-  background-color: white;
+  background-color: var(--color-white);
   width: 300px;
-  margin: 0 auto;
-  padding: 2rem;
 }
 
 .sign-in-icon {
   font-size: 5rem;
-}
-
-.input-remember {
-  display: flex;
 }
 
 .input-remember label {
@@ -217,99 +234,49 @@ h1 {
 }
 
 .input-wrapper {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
   margin-bottom: 1rem;
-}
-
-.input-wrapper label {
-  font-weight: bold;
 }
 
 .input-wrapper input {
   padding: 5px;
-  font-size: 1.2rem;
 }
 
 .footer {
-  display: flex;
   justify-content: center;
   border-top: 2px solid #ccc;
   padding: 2rem 0 1.5rem;
 }
 
-.footer-text {
-  margin: 0;
-  padding: 0;
-}
-
 .account {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid var(--color-black);
+  background-color: var(--color-white);
   width: 80%;
-  margin: 0 auto;
-  flex-direction: column;
   padding: 1.5rem;
-  box-sizing: border-box;
-  text-align: left;
-  margin-bottom: 2rem;
 }
 
 .account-amount {
-  margin: 0;
   font-size: 2.5rem;
-  font-weight: bold;
-}
-
-.account-amount-description {
-  margin: 0;
 }
 
 .account-title {
-  margin: 0;
-  padding: 0;
-  font-size: 1rem;
   font-weight: normal;
 }
 
-.account-content-wrapper {
-  width: 100%;
-  flex: 1;
-}
-
 .edit-button {
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #000;
-  font-weight: bold;
   padding: 10px;
-  cursor: pointer
 }
 
 .user-welcome {
-  color: #fff;
-  margin-bottom: 2rem;
-}
-
-.transaction-button {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #000;
+  color: var(--color-white);
 }
 
 @media (width >= 720px) {
+  :root {
+    --row: flex-direction: row;
+  }
+
   .account {
-    flex-direction: row;
+    flex-direction: var(--row);
   }
 
   .account-content-wrapper.cta {
@@ -318,5 +285,31 @@ h1 {
 
   .transaction-button {
     width: 200px;
+  }
+
+  @media (width >= 920px) {
+    .width-300px-gt920pxmq {
+      width: 300px;
+    }
+
+    .hero {
+      height: 400px;
+      background-position: 0% 33%;
+    }
+
+    .hero-content {
+      position: absolute;
+      top: 50px;
+      right: 50px;
+      margin: 2rem;
+    }
+
+    .hero-content .subtitle {
+      font-size: 1.5rem;
+    }
+
+    .features {
+      flex-direction: var(--row);
+    }
   }
 }
